[project]
name = "rednose"
version = "0.0.1"
description = "Kalman filter library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "comma.ai"}]
dependencies = [
  "numpy",
  "cffi",
  "sympy",
  "comma-deps-eigen",
  "Cython",
  "scons",
  "setuptools",
]

[project.optional-dependencies]
dev = [
  "scipy",
  "ruff",
  "ty",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rednose*"]

[tool.setuptools.package-data]
"*" = ["helpers/chi2_lookup_table.npy", "templates/*"]

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
flake8-implicit-str-concat.allow-multiline = false
